# talos

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  bazel-bin  bazel-feedhandler  bazel-out  bazel-testlogs
data/: SampleMarketData.csv
scripts/: shutdown.sh  startup.sh
src/: BUILD.bazel  Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventLogger.cpp  EventPublisher.cpp  EventPublisher.hpp  EventQueue.cpp  EventSubscriber.hpp  MarketDataClient.cpp  MarketDataClient.hpp  MarketDataEvent.hpp  MarketDataFeed.hpp  MarketDataFeedHandler.cpp  MarketDataFeedHandler.hpp  MarketDataSimulator.cpp  MarketDataSimulator.hpp  TradingEngine.cpp  TradingEngine.hpp  main.cpp
src/apps/: BUILD.bazel  ClientAppMain.cpp  DatabaseAppMain.cpp  ExchangeAppMain.cpp  NetAdminAppMain.cpp  OMEngineAppMain.cpp  OrderGeneratorAppMain.cpp
src/apps/ClientApp/: BUILD.bazel  ClientApp.cpp
src/apps/ExchangeApp/: BUILD.bazel  Exchange.cpp  Exchange.hpp  ExchangeApp.cpp
src/apps/FOBookingApp/: BUILD.bazel  FOBookingApp.cpp
src/apps/OMApp/: BUILD.bazel  OMApp.cpp  OMEngine.cpp  OMEngine.hpp
src/apps/OMSApp/: BUILD.bazel  OMSApp.cpp
src/apps/TraderApp/: BUILD.bazel  TraderApp.cpp
src/apps/clientApp/: ClientApp.cpp  ClientApp.hpp  FOBookingApp.cpp  main.cpp
src/apps/engineApp/: OMApp.cpp  OMEngine.cpp  OMEngine.hpp  main.cpp
src/apps/exchangeApp/: Exchange.cpp  Exchange.hpp  ExchangeFixServer.cpp  ExchangeFixServer.hpp  main.cpp
src/libs/: App.cpp  App.hpp  BUILD.bazel  MarketDataFeedHandler.cpp  MarketDataFeedHandler.hpp  MarketDataSimulator.cpp  MarketDataSimulator.hpp  TradingEngine.cpp  TradingEngine.hpp
src/libs/Events/: EventHandler.cpp  EventLogger.cpp  EventLogger.hpp  EventQueue.hpp
src/libs/Fix/: FixMessage.cpp  FixMessage.hpp  FixTag.hpp
src/libs/Socket/: Client.cpp  Client.hpp  ConnectionPorts.hpp  FixClient.cpp  FixClient.hpp  FixServer.cpp  FixServer.hpp  Server.cpp  Server.hpp
src/libs/Utilities/: MovingAverage.cpp  UUID.hpp
src/libs/client/: App.cpp  ClientApp.cpp  ClientApp.hpp  OrderGenerator.cpp  OrderGenerator.hpp
src/libs/database/: DatabaseServer.cpp  DatabaseServer.hpp
src/libs/engine/: OMEngine.cpp  OMEngine.hpp
src/libs/exchange/: ExchangeServer.cpp  ExchangeServer.hpp
src/libs/fix/: FixMessage.cpp  FixTag.hpp
src/libs/logger/: Logger.cpp  Logger.hpp
src/libs/netadmin/: NetAdmin.cpp  NetAdmin.hpp
test/: BUILD.bazel  TestFixMessage.cpp
(+14 files in other folders)
