cc_binary(
    name = "client_app",
    srcs = ["ClientAppMain.cpp"],
    deps = ["//src/libs:order_management_system_lib"],
    visibility = ["//visibility:public"]
)

cc_binary(
    name = "engine_app",
    srcs = ["OMEngineAppMain.cpp"],
    deps = ["//src/libs:order_management_system_lib"],
    visibility = ["//visibility:public"]
)

cc_binary(
    name = "database_app",
    srcs = ["DatabaseAppMain.cpp"],
    deps = ["//src/libs:order_management_system_lib"],
    visibility = ["//visibility:public"]
)

cc_binary(
    name = "exchange_app",
    srcs = ["ExchangeAppMain.cpp"],
    deps = [
        "//src/libs:order_management_system_lib"
    ],
    visibility = ["//visibility:public"]
)
